Even more work for the review.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "import openmdao.api as om\n",
-    "from  runge_kutta_openmdao.runge_kutta.integration_control import IntegrationControl\n",
+    "from  rkopenmdao.integration_control import IntegrationControl\n",
     "\n",
     "class ODEComponent(om.ExplicitComponent):\n",
     "    def initialize(self):\n",
@@ -141,8 +141,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
-    "from runge_kutta_openmdao.runge_kutta.runge_kutta_integrator import RungeKuttaIntegrator\n",
-    "from runge_kutta_openmdao.runge_kutta.butcher_tableaux import implicit_euler\n",
+    "from rkopenmdao.runge_kutta_integrator import RungeKuttaIntegrator\n",
+    "from rkopenmdao.butcher_tableaux import implicit_euler\n",
     "\n",
     "\n",
     "integration_control = IntegrationControl(0.0, 100, 0.01)\n",
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "from runge_kutta_openmdao.runge_kutta.functional_coefficients import FunctionalCoefficients\n",
+    "from rkopenmdao.functional_coefficients import FunctionalCoefficients\n",
     "\n",
     "class MultidisciplinaryFunctionalCoefficients(FunctionalCoefficients):\n",
     "    def __init__(self, num_steps: int, delta_t: float) -> None:\n",
