Some updates on the user guide, and a test for postprocessing with distributed variables.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -113,15 +113,15 @@
    "id": "1dc8fa60",
    "metadata": {},
    "source": [
-    "You should notice a few things here. First, we gave the component an options for an **IntegrationControl**-object.\n",
+    "You should notice a few things here. First, we gave the component an option for an **IntegrationControl**-object.\n",
     "This class contains data and metadata for the current time step and time stage.\n",
-    "An instance of this class should  be passed to the outer integration component and all components in the time stage problem.\n",
+    "An instance of this class should be passed to the outer integration component and most components in the time stage problem.\n",
     "More details on that later.\n",
     "Second, notice that the three declared variables have certain tags.\n",
     "All three share the tag \"x\", which is done so that they are grouped as belonging to the same quantity.\n",
     "Furthermore, these have a second tag that describes their role in the time integration. \n",
-    "The tag \"step_input_var\" is used for the variable containing the old state of the quantity, and the tag \"\"accumulated_stage_var\" is used for the \"$s_i$\" of the quantity.\n",
-    "These two tags need to be applied to input variables, and per quantity it is necessary to either have both or non of these tags.\n",
+    "The tag \"step_input_var\" is used for the variable containing the old state of the quantity, and the tag \"accumulated_stage_var\" is used for the \"$s_i$\" of the quantity.\n",
+    "These two tags need to be applied to input variables, and per quantity it is necessary to either have both or none of these tags.\n",
     "(The second case might be useful for cases where the time derivate of a quantity does not depend on the state of the same quantity but of other quantities.)\n",
     "Then there is the tag \"stage_output_var\" for the \"$k_i$\" of the quantity.\n",
     "For each quantity you want to apply time integration on, an output with this tag needs to be present.\n",
@@ -207,7 +207,7 @@
     "* The *write_out_distance* is the distance between the time steps for which quantity data is written to disc (in the form of an HDF5 file), starting with the initial values. \n",
     "The default is zero, for which no data is written out.\n",
     "Note that when writing out data, the data of the final step is always written out, even if the step number isn't a multiple of *write_out_distance*.\n",
-    "* The *write_file* (default: data.h5) is the name of the HDF5-file the quantity data is stored in (if *write_out_distance* is nonzero). The file structure of the file is of the form quantity/time_step.\n",
+    "* The *write_file* (default: data.h5) is the name of the HDF5-file the quantity data is stored in (if *write_out_distance* is non-zero). The file structure of the file is of the form quantity/time_step.\n",
     "\n",
     "There are still other optional arguments which will be covered later.\n",
     "\n",
@@ -385,11 +385,11 @@
    "source": [
     "# Further options of the RungeKuttaIntegrator\n",
     "## Postprocessing\n",
-    "The **RungeKuttaIntegrator** doesn't just have the ability to do time integration, it also can do time step postprocessing.\n",
+    "The **RungeKuttaIntegrator** doesn't just have the ability to do time integration, it also can do time-step postprocessing.\n",
     "An example use case could be the computation of a value derived of the quantities of the time integration, which isn't necessarily dependent on time (or at least not in the form of time derivatives).\n",
-    "While it is probably possible to \"hack\" the derived quantity into the time integration, it also probably more comfortable (and less computationaly expensive) to have the ability to postprocess.\n",
+    "While it is possible to \"hack\" the derived quantity into the time integration in most cases, it also useful to have such an ability to postprocess, be it  because it's less computationally intensive, or simply because it's easier to understand.\n",
     "\n",
-    "For postprocessing, we give a second openMDAO to the **RungeKuttaIntegrator**, which takes a subset of the time integration quantities as inputs, and from which we can get some new additional quantities. We extend the first example:"
+    "For postprocessing, we give a second openMDAO problem to the **RungeKuttaIntegrator**, which takes a subset of the time integration quantities as inputs, and from which we can get some new additional quantities. We extend the first example:"
    ]
   },
   {
@@ -809,7 +809,7 @@
     "The default is the empty dict.\n",
     "Note that some of those constructor arguments are controlled by the **RungeKuttaIntegrator** and are set/overwritten by it, namely the *checkpoint*, *fwd_operator*, *rev_operator* and *n_timesteps* arguments.\n",
     "\n",
-    "To illustrate, we use the reverse mode example, but this time uses disk storage:"
+    "To illustrate, we use the reverse mode example, but this time use disk storage:"
    ]
   },
   {
@@ -922,8 +922,39 @@
     "\n",
     "To see some further examples, look into /src/runge_kutta_openmdao/examples.\n",
     "In there, there are examples for solving the heat equation via the finite-difference-method and the **RungeKuttaIntegrator**, both in a monodisciplinary way and one multidisciplinary with a split domain.\n",
-    "Also, a first version of the [Cannonball example from the openMDAO docs](https://openmdao.org/newdocs/versions/latest/advanced_user_guide/example/euler_integration_example.html), ported to this extension, can be found there.\n",
-    "Note that this isn't a feature complete port currently, since the **RungeKuttaIntegrator** can only work with fixed numbers of time steps."
+    "Also, there are examples on how to use the **RungeKuttaIntegrator** with MPI support, as explained in the next section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MPI Support\n",
+    "\n",
+    "The **RungeKuttaIntegrator** can also work with MPI parallel problems (both for time integration and postprocessing).\n",
+    "In that case, the in- and outputs of the integration component will mimic the structure of the variables of the quantities in the inner problems.\n",
+    "Both variants of MPI support from openMDAO are supported, meaning distributed variables and parallel groups.\n",
+    "However, some conditions must be fulfilled on the inner problems for it to work:\n",
+    "\n",
+    "In general:\n",
+    "- Make sure that the communicators used by the **RungeKuttaIntegrator**-instance, the time stage problem, and the postprocessing problem are compatible, as in that the ranks used match for all of them (this is easiest achieved by just using the same communicator for all of them).\n",
+    "Also the different variables for the same quantity have to reside on the same rank(s), even across the different problems.\n",
+    "The **RungeKuttaIntegrator** will create its in- and outputs accordingly. That means in particular\n",
+    "\n",
+    "\n",
+    "For  distributed variables:\n",
+    "- The distribution structure of the different variables for the same quantity must be the same, i.e. the variables with the \"step_input_var\", \"accumulated_stage_var\" and \"stage_output_var\" for a quantity must be distributed in the same way, over the same ranks.\n",
+    "- Should you additionally use that quantity in an postprocessing problem, the variable with the \"postproc_input_var\" tag must share the same distribution structure.\n",
+    "- The in- and outputs of the **RungeKuttaIntegrator** instance will be created such that they also share the same distribution structure.\n",
+    "\n",
+    "For parallel groups:\n",
+    "- Make sure that the in- and output variables really share the same ranks.\n",
+    "That can e.g. achieved by manually creating IndependentVariableComponents for the inputs, and grouping them together with the respective component before adding them into a parallel group.\n",
+    "- The variables in the parallel group will only be available on certain ranks, not all of them.\n",
+    "Make sure that this is both reflected in the inputs for a postprocessing problem, and be aware that this will also be the case for the resulting in- and outputs of the time integration component.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
