Updated user guide.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -14,7 +14,7 @@
     "This can be achieved by using the class **RungeKuttaIntegrator**, which allows time stepping via Runge-Kutta schemes.\n",
     "Currently, both explicit and DIRK (**D**iagonally **I**mplicit **R**unge-**K**utta) schemes are supported.\n",
     "\n",
-    "Runge-Kutta schemes are single-step multi-stage methods for ODEs, i.e. the computation of the state at the next time step is done using only the information from one previous step, but multiple intermediate stages are used to do so.\n",
+    "Runge-Kutta schemes are single-step multi-stage methods for ODEs, i.e. the computation of the state at the next time step is done using only the information from one previous step, but multiple intermediate stages are introduced additionally.\n",
     "A common form of representation for RK-methods uses the so-called Butcher tableaux:\n",
     "$$\n",
     "\\begin{array} {r|r } c_1 & a_{11} & a_{12} & \\cdots & a_{1S} \\\\  c_2 & a_{21} & a_{22} & \\cdots & a_{2S} \\\\  \\vdots & \\vdots  & \\vdots & \\ddots & \\vdots \\\\  c_S & a_{S1} & a_{S2} & \\cdots & a_{SS} \\\\ \\hline  & b_1 & b_2 & \\cdots & b_S \\\\   \\end{array}\n",
@@ -35,17 +35,18 @@
     "where the $c_i$ are from the first column of the Butcher tableau, and the $a_{ij}$ from the Butcher matrix in the tableau.\n",
     "In general, this leads to a $s\\cdot d$-dimensional nonlinear system of equations, where $d$ is the dimension of $x$.\n",
     "However, for explicit schemes we have $a_{ij} = 0$ for $i<=j$, and for DIRK schemes we have $a_{ij} = 0$ for $i<j$.\n",
-    "This allows the stages to solved for sequentially.\n",
+    "This allows the stages to be solved for sequentially.\n",
     "\n",
-    "Define $s_i:=\\sum_{j=0}^{i-1}a_{ij} k_j$. Then we can write the formula for  explicit or DIRK schemes as\n",
+    "Define $s_i:=\\sum_{j=0}^{i-1}a_{ij} k_j$. Then we can rewrite the formula for the stage of explicit or DIRK schemes as\n",
     "$$\n",
     "k_i = f\\left(t_n + \\Delta t\\cdot c_i, x_n + \\Delta t\\cdot (s_i + a_{ii} k_i) \\right), \\quad i =1,\\ldots, S.\n",
     "$$\n",
     "In this form, the formula always has the same number of variables and the same structure, independent of which stage is currently computed.\n",
     "This is what allows us to take the following approach:\n",
     "We assume that we have an openMDAO-problem that models one time stage of the instationary multidisciplinary problem. \n",
-    "In this problem, we have inputs $x_n$ and $s_i$ as well as outputs $k_i$ per discipline thar are marked both with a tag for the discipline and the role of the variable in the time integration.\n",
-    "To do the time integration, we repeatedly run this model with differing inputs and outputs:\n",
+    "In this problem, we have inputs $x_n$ and $s_i$ as well as outputs $k_i$ per discipline.\n",
+    "These are marked both with a tag for the discipline and the role of the variable in the time integration.\n",
+    "To do the time integration then, we repeatedly run this model with differing inputs and outputs:\n",
     "\n",
     "1. At the start of each time step, we write the old states into the inputs of the $x_n$s of the disciplines.\n",
     "2. At the start of each time stage, we compute the new $s_i$ and write it into the respective inputs.\n",
@@ -122,7 +123,7 @@
     "Furthermore, these have a second tag that describes their role in the time integration. \n",
     "The tag \"step_input_var\" is used for the variable containing the old state of the quantity, and the tag \"accumulated_stage_var\" is used for the \"$s_i$\" of the quantity.\n",
     "These two tags need to be applied to input variables, and per quantity it is necessary to either have both or none of these tags.\n",
-    "(The second case might be useful for cases where the time derivate of a quantity does not depend on the state of the same quantity but of other quantities.)\n",
+    "(The second case might be useful for problems where the time derivate of a quantity does not depend on the state of the same quantity but of other quantities.)\n",
     "Then there is the tag \"stage_output_var\" for the \"$k_i$\" of the quantity.\n",
     "For each quantity you want to apply time integration on, an output with this tag needs to be present.\n",
     "\n",
@@ -474,7 +475,7 @@
    "metadata": {},
    "source": [
     "We first defined the component that we put in our postprocessing problem.\n",
-    "Note that while here our problem only has one component, it can be as complex as you want it to be."
+    "Note that while here, this problem only has one component, it can be as complex as you want it to be."
    ]
   },
   {
@@ -733,7 +734,6 @@
     "    def compute(self, inputs, outputs):\n",
     "        outputs[\"sq\"] = (inputs[\"x\"]-1)**2 + inputs[\"y\"]**2\n",
     "\n",
-    "\n",
     "    def compute_jacvec_product(self, inputs, d_inputs, d_outputs, mode, discrete_inputs=None):\n",
     "        if mode == \"fwd\":\n",
     "            d_outputs[\"sq\"] += 2 * (inputs[\"x\"] - 1) * d_inputs[\"x\"]\n",
@@ -754,7 +754,10 @@
     "\n",
     "runge_kutta_problem.driver = om.ScipyOptimizeDriver()\n",
     "runge_kutta_problem.driver.options[\"optimizer\"] =\"SLSQP\"\n",
-    "for mode in [\"fwd\", \"rev\"]:\n",
+    "res_0 = np.zeros((2,2))\n",
+    "res_N = np.zeros((2,2))\n",
+    "res_obj = np.zeros(2)\n",
+    "for i, mode in enumerate([\"fwd\", \"rev\"]):\n",
     "    runge_kutta_problem.setup(mode = mode)\n",
     "\n",
     "    runge_kutta_problem[\"rk_comp.x_initial\"] = 0.5\n",
@@ -764,31 +767,16 @@
     "\n",
     "    runge_kutta_problem.run_driver()\n",
     "\n",
-    "    fig, (ax1, ax2) = plt.subplots(1,2)\n",
-    "\n",
-    "    t = np.linspace(0.0, 10.0, 41)\n",
-    "\n",
-    "    numeric_data = np.zeros((41, 2))\n",
-    "    with h5py.File(\"coupled_ODE_solving_example.h5\", mode = \"r\") as f:\n",
-    "        for i in range(41):\n",
-    "            numeric_data[i][0] = f[\"x\"][str(25*i)][0]\n",
-    "            numeric_data[i][1] = f[\"y\"][str(25*i)][0]\n",
-    "    ax1.plot(t, numeric_data[:,0], \"o\", label = \"Numeric solution of x\")\n",
-    "    ax2.plot(t, numeric_data[:,1], \"o\", label = \"Numeric solution of y\")\n",
-    "\n",
-    "    ax1.set_xlabel(\"t\")\n",
-    "    ax1.set_xlim(0.0,10.0)\n",
-    "    ax1.set_ylabel(\"x(t)\")\n",
-    "    ax1.set_ylim(-1.5, 1.5)\n",
-    "    ax1.legend()\n",
-    "\n",
-    "    ax2.set_xlabel(\"t\")\n",
-    "    ax2.set_xlim(0.0,10.0)\n",
-    "    ax2.set_ylabel(\"y(t)\")\n",
-    "    ax2.set_ylim(-1.5, 1.5)\n",
-    "    ax2.legend()\n",
-    "\n",
-    "    plt.show()"
+    "    res_0[i,0] = runge_kutta_problem[\"rk_comp.x_initial\"]\n",
+    "    res_0[i,1] = runge_kutta_problem[\"rk_comp.y_initial\"]\n",
+    "    res_N[i,0] = runge_kutta_problem[\"rk_comp.x_final\"]\n",
+    "    res_N[i,1] = runge_kutta_problem[\"rk_comp.y_final\"]\n",
+    "    res_obj[i] = runge_kutta_problem[\"square.sq\"]\n",
+    "for i, mode in enumerate([\"fwd\", \"rev\"]):\n",
+    "    print(mode + \"_results:\")\n",
+    "    print(\"x0 = \", res_0[i,0], \" y_0 = \", res_0[i,1])\n",
+    "    print(\"xN = \", res_N[i,0], \" y_N = \", res_N[i,1])\n",
+    "    print(\"objective = \", res_obj[i])\n"
    ]
   },
   {
@@ -876,31 +864,11 @@
     "\n",
     "runge_kutta_problem.run_driver()\n",
     "\n",
-    "fig, (ax1, ax2) = plt.subplots(1,2)\n",
-    "\n",
-    "t = np.linspace(0.0, 10.0, 41)\n",
-    "\n",
-    "numeric_data = np.zeros((41, 2))\n",
-    "with h5py.File(\"coupled_ODE_solving_example.h5\", mode = \"r\") as f:\n",
-    "    for i in range(41):\n",
-    "        numeric_data[i][0] = f[\"x\"][str(25*i)][0]\n",
-    "        numeric_data[i][1] = f[\"y\"][str(25*i)][0]\n",
-    "ax1.plot(t, numeric_data[:,0], \"o\", label = \"Numeric solution of x\")\n",
-    "ax2.plot(t, numeric_data[:,1], \"o\", label = \"Numeric solution of y\")\n",
-    "\n",
-    "ax1.set_xlabel(\"t\")\n",
-    "ax1.set_xlim(0.0,10.0)\n",
-    "ax1.set_ylabel(\"x(t)\")\n",
-    "ax1.set_ylim(-1.5, 1.5)\n",
-    "ax1.legend()\n",
-    "\n",
-    "ax2.set_xlabel(\"t\")\n",
-    "ax2.set_xlim(0.0,10.0)\n",
-    "ax2.set_ylabel(\"y(t)\")\n",
-    "ax2.set_ylim(-1.5, 1.5)\n",
-    "ax2.legend()\n",
-    "\n",
-    "plt.show()"
+    "print(\"results:\")\n",
+    "print(\"x0 = \", runge_kutta_problem[\"rk_comp.x_initial\"], \" y_0 = \", runge_kutta_problem[\"rk_comp.y_initial\"])\n",
+    "print(\"xN = \", runge_kutta_problem[\"rk_comp.x_final\"], \" y_N = \", runge_kutta_problem[\"rk_comp.y_final\"])\n",
+    "print(\"objective = \", runge_kutta_problem[\"square.sq\"])\n",
+    "\n"
    ]
   },
   {
