Updated user guide and added some additional documentation.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -681,6 +681,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from rkopenmdao.checkpoint_interface.pyrevolve_checkpointer import PyrevolveCheckpointer\n",
+    "\n",
     "integration_control = IntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
@@ -708,6 +710,7 @@
     "        time_integration_quantities=[\"x\", \"y\"],\n",
     "        write_file=\"coupled_ODE_solving_example.h5\",\n",
     "        write_out_distance=25,\n",
+    "        checkpointing_type = PyrevolveCheckpointer\n",
     "    )\n",
     ")\n",
     "class ObjComp(om.ExplicitComponent):\n",
@@ -769,18 +772,12 @@
    "metadata": {},
    "source": [
     "Both forward and reverse mode yield the same result (within tolerance).\n",
-    "Note that the reverse mode uses checkpointing via [PyRevolve](https://github.com/devitocodes/PyRevolve) internally.\n",
-    "All the single-level checkpointing methods of said library can be used, with the NumPy array-based storage is the default.\n",
-    "Note that the multi-level checkpointing is currently not working reliably in the `RungeKuttaIntegrator`, and usage of it is not advised.\n",
     "\n",
     "There are two arguments in the `RungeKuttaIntegrator` to configure checkpointing:\n",
-    "1. `revolver_type`, which is one of `\"SingeLevel\"`, `\"MultiLevel\"`, `\"Memory\"`, `\"Disk\"` or `\"Base\"`, with `\"Memory\"` being the default, resulting in NumPy array-based storage for the checkpoints.\n",
-    "The others correspond to the types of revolvers found in the [PyRevolve repository](https://github.com/devitocodes/pyrevolve/blob/master/pyrevolve/pyrevolve.py).\n",
-    "2. `revolver_options`, which expects a `dict` of constructor arguments to the revolver chosen with the previous argument.\n",
-    "The default is the empty dictionary.\n",
-    "Note that some of those constructor arguments are controlled by the `RungeKuttaIntegrator` and are set/overwritten by it, namely the `checkpoint`, `fwd_operator`, `rev_operator` and `n_timesteps` arguments.\n",
+    "1. `checkpointing_type`, which needs to be implementations of the class `CheckpointInterface`. There are three implementations currently: `NoCheckpointer` (the default), which doesn't set checkpoints (and doesn't work with reverse-mode in the process). `AllCheckpointer`, which sets checkpoints at all time steps, and `PyrevolveCheckpointer`, which uses [PyRevolve](https://github.com/devitocodes/PyRevolve) for checkpointing.\n",
+    "2. `Checkpoint_options`, which is a dict for implementation specific options that are passed to the checkpointer.\n",
     "\n",
-    "To illustrate, we use the reverse mode example, but this time use disk storage:"
+    "To illustrate, we use the reverse mode example, but this time use the `AllCheckpointer`:"
    ]
   },
   {
@@ -790,6 +787,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from rkopenmdao.checkpoint_interface.all_checkpointer import AllCheckpointer\n",
+    "\n",
     "integration_control = IntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
@@ -815,8 +814,7 @@
     "        butcher_tableau=implicit_euler,\n",
     "        integration_control=integration_control,\n",
     "        time_integration_quantities=[\"x\", \"y\"],\n",
-    "        revolver_type=\"Disk\",\n",
-    "        revolver_options={\"n_checkpoints\": 100}\n",
+    "        checkpointing_type= AllCheckpointer\n",
     "    )\n",
     ")\n",
     "\n",
@@ -850,15 +848,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "312b9537",
-   "metadata": {},
-   "source": [
-    "Note that we also could have omitted the `revolver_options` argument and let PyRevolve chose the number of checkpoints to use."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "c54ca331",
    "metadata": {},
    "source": [
@@ -871,6 +860,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8812f27208b5ce77",
    "metadata": {},
    "source": [
     "## MPI Support\n",
@@ -895,8 +885,7 @@
     "That can e.g. achieved by manually creating IndependentVariableComponents for the inputs, and grouping them together with the respective component before adding them into a parallel group.\n",
     "- The variables in the parallel group will only be available on certain ranks, not all of them.\n",
     "Make sure that this is both reflected in the inputs for a postprocessing problem, and be aware that this will also be the case for the resulting in- and outputs of the time integration component.\n"
-   ],
-   "id": "8812f27208b5ce77"
+   ]
   }
  ],
  "metadata": {
