Update naming of rkopenmdao to RKOpenMDAO. Also some small nits.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "The goal of this library is to extend openMDAO with the ability to do time integration, so that we are able to do instationary MDAO.\n",
+    "The goal of this library is to extend OpenMDAO with the ability to do time integration, so that we are able to do instationary MDAO.\n",
     "This can be achieved by using the class `RungeKuttaIntegrator`, which allows time stepping via Runge-Kutta schemes.\n",
     "Currently, both explicit and DIRK (**D**iagonally **I**mplicit **R**unge-**K**utta) schemes are supported.\n",
     "\n",
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class NintyNinthStepFunctionalCoefficients(FunctionalCoefficients):\n",
+    "class NinetyNinthStepFunctionalCoefficients(FunctionalCoefficients):\n",
     "    def list_quantities(self) -> List[str]:\n",
     "        return [\"log_x\"]\n",
     "    \n",
@@ -614,7 +614,7 @@
     "\n",
     "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
     "\n",
-    "functional_coefficients = NintyNinthStepFunctionalCoefficients()\n",
+    "functional_coefficients = NinetyNinthStepFunctionalCoefficients()\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
@@ -649,7 +649,7 @@
    "metadata": {},
    "source": [
     "The used \"functional\" coefficients take the value of the 99th time step of the quantity `\"log_x\"` and make it an output of the `RKIntegrator`.\n",
-    "The quantity `\"x\"` doesn't get an additional functional output, as `NintyNinthStepFunctionalCoefficients` doesn't list it in its `list_quantities`\t"
+    "The quantity `\"x\"` doesn't get an additional functional output, as `NinetyNinthStepFunctionalCoefficients` doesn't list it in its `list_quantities`\t"
    ]
   },
   {
@@ -853,7 +853,7 @@
    "source": [
     "# Further Examples\n",
     "\n",
-    "To see some further examples, look into `/src/runge_kutta_openmdao/examples`.\n",
+    "To see some further examples, look into `/examples`.\n",
     "In there, there are examples for solving the heat equation via the finite-difference-method and the `RungeKuttaIntegrator`, both in a monodisciplinary way and one multidisciplinary with a split domain.\n",
     "Also, there are examples on how to use the `RungeKuttaIntegrator` with MPI support, as explained in the next section."
    ]
