--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -883,8 +883,8 @@
     "For parallel groups:\n",
     "- Make sure that the in- and output variables really share the same ranks.\n",
     "That can e.g. achieved by manually creating IndependentVariableComponents for the inputs, and grouping them together with the respective component before adding them into a parallel group.\n",
-    "- The variables in the parallel group will only be available on certain ranks, not all of them.\n",
-    "Make sure that this is both reflected in the inputs for a postprocessing problem, and be aware that this will also be the case for the resulting in- and outputs of the time integration component.\n"
+    "- While quantities will only reside on certain ranks in the inner problem, there will be in/outputs on every rank in the`RungeKuttaIntegrator`.\n",
+    "But the size of the variables on all ranks but the ones where the quantity is found in the inner problem will be zero.\n"
    ]
   }
  ],
