Removed typing module and replaced with __future__ or other suitable changes.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -500,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from __future__ import annotations\n",
     "from rkopenmdao.functional_coefficients import FunctionalCoefficients\n",
     "\n",
     "class MultidisciplinaryFunctionalCoefficients(FunctionalCoefficients):\n",
@@ -508,7 +508,7 @@
     "        self.num_steps = num_steps\n",
     "        self.delta_t = delta_t\n",
     "\n",
-    "    def list_quantities(self) -> List[str]:\n",
+    "    def list_quantities(self) -> list[str]:\n",
     "        return [\"x\", \"y\"]\n",
     "    \n",
     "    def get_coefficient(self, time_step: int, quantity: str) -> float:\n",
@@ -603,7 +603,7 @@
    "outputs": [],
    "source": [
     "class NinetyNinthStepFunctionalCoefficients(FunctionalCoefficients):\n",
-    "    def list_quantities(self) -> List[str]:\n",
+    "    def list_quantities(self) -> list[str]:\n",
     "        return [\"log_x\"]\n",
     "    \n",
     "    def get_coefficient(self, time_step: int, quantity: str) -> float:\n",
@@ -904,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
