Updated user guide for time independent inputs.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -381,6 +381,94 @@
    "metadata": {},
    "source": [
     "# Further Options of the `RungeKuttaIntegrator`\n",
+    "## Time-Independent Inputs\n",
+    "Sometimes it's useful to not just have control over the initial values from the outer problem, but to also be able to manipulate other time-independent quantities from the other quantities, be it because of coupling with another stationary equation, or for optimization purposes. For that, the `RungeKuttaIntegrator` has an option to pass such inputs through, provided they are tagged accordingly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1635ff9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "class ODEComponentWithStationaryInput(om.ExplicitComponent):\n",
+    "    def initialize(self):\n",
+    "        self.options.declare(\"integration_control\", types=IntegrationControl)\n",
+    "\n",
+    "    def setup(self):\n",
+    "        self.add_input(\"x_old\", val=1.0, tags=[\"x\", \"step_input_var\"])\n",
+    "        self.add_input(\"s_i\", val=0.0, tags=[\"x\", \"accumulated_stage_var\"])\n",
+    "        self.add_output(\"k_i\", val=1.0, tags=[\"x\", \"stage_output_var\"])\n",
+    "        self.add_input(\"b\", val = 1.0, tags = [\"b\", \"time_independent_input_var\"])\n",
+    "\n",
+    "    def setup_partials(self):\n",
+    "        self.declare_partials(\"*\", \"*\")\n",
+    "\n",
+    "    def compute(self, inputs, outputs):\n",
+    "        delta_t = self.options[\"integration_control\"].delta_t\n",
+    "        butcher_diagonal_element = self.options[\"integration_control\"].butcher_diagonal_element\n",
+    "        outputs[\"k_i\"] = inputs[\"b\"] * (inputs[\"x_old\"] + delta_t * inputs[\"s_i\"]) / (1 - inputs[\"b\"] * delta_t * butcher_diagonal_element)\n",
+    "\n",
+    "    def compute_partials(self, inputs, partials):\n",
+    "        delta_t = self.options[\"integration_control\"].delta_t\n",
+    "        butcher_diagonal_element = self.options[\"integration_control\"].butcher_diagonal_element\n",
+    "        partials[\"k_i\", \"x_old\"] = inputs[\"b\"] / (1 - inputs[\"b\"] * delta_t * butcher_diagonal_element)\n",
+    "        partials[\"k_i\", \"s_i\"] = delta_t * inputs[\"b\"] / (1 -  inputs[\"b\"] *delta_t * butcher_diagonal_element)\n",
+    "        partials[\"k_i\", \"b\"] = (inputs[\"x_old\"] + delta_t * inputs[\"s_i\"]) / (1 - inputs[\"b\"] * delta_t * butcher_diagonal_element)**2\n",
+    "\n",
+    "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
+    "\n",
+    "time_stage_problem = om.Problem()\n",
+    "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponentWithStationaryInput(integration_control=integration_control))\n",
+    "\n",
+    "runge_kutta_problem = om.Problem()\n",
+    "runge_kutta_problem.model.add_subsystem(\n",
+    "    \"rk_comp\", \n",
+    "    RungeKuttaIntegrator(\n",
+    "        time_stage_problem=time_stage_problem, \n",
+    "        butcher_tableau=implicit_euler,\n",
+    "        integration_control=integration_control,\n",
+    "        time_integration_quantities=[\"x\"],\n",
+    "        time_independent_input_quantities = [\"b\"],\n",
+    "        write_file=\"ODE_example_with_input_passthrough.h5\",\n",
+    "        write_out_distance = 10,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "runge_kutta_problem.setup()\n",
+    "for param in [-1.0, 0.0, 1.0, 2.0]:\n",
+    "    runge_kutta_problem[\"rk_comp.b\"] = param\n",
+    "    runge_kutta_problem.run_model()\n",
+    "    print(runge_kutta_problem[\"rk_comp.x_final\"])\n",
+    "    fig, ax = plt.subplots(1,1)\n",
+    "\n",
+    "    t = np.linspace(0.0,1.0, 11)\n",
+    "    ax.plot(t, np.exp(param * t), label=\"Analytic solution.\")\n",
+    "\n",
+    "    numeric_data = np.zeros(11)\n",
+    "    with h5py.File(\"ODE_example_with_input_passthrough.h5\", mode=\"r\") as f:\n",
+    "        for i in range(11):\n",
+    "            numeric_data[i] = f[\"x\"][str(10*i)][0]\n",
+    "    ax.plot(t, numeric_data, \"o\", label=\"Numeric Solution\")\n",
+    "\n",
+    "    ax.set_xlabel(\"t\")\n",
+    "    ax.set_xlim(0.0,1.0)\n",
+    "    ax.set_ylabel(\"x(t)\")\n",
+    "    ax.set_ylim(0.0,3.0)\n",
+    "    ax.legend()\n",
+    "\n",
+    "    plt.show()\n",
+    "    # reseting data file\n",
+    "    runge_kutta_problem.model.rk_comp._setup_write_file()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e9f040",
+   "metadata": {},
+   "source": [
     "## Postprocessing\n",
     "The `RungeKuttaIntegrator` doesn't just have the ability to do time integration, it also can do time-step postprocessing.\n",
     "An example use case could be the computation of a value derived of the quantities of the time integration, which isn't necessarily dependent on time (or at least not in the form of time derivatives).\n",
