--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -72,12 +72,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "73d93e3a",
    "metadata": {
     "is_executing": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'openmdao'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mopenmdao\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mom\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m  \u001b[39m\u001b[38;5;21;01mrkopenmdao\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mintegration_control\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IntegrationControl\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mODEComponent\u001b[39;00m(om\u001b[38;5;241m.\u001b[39mExplicitComponent):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openmdao'"
+     ]
+    }
+   ],
    "source": [
     "import openmdao.api as om\n",
     "from  rkopenmdao.integration_control import IntegrationControl\n",
@@ -114,9 +126,9 @@
    "id": "1dc8fa60",
    "metadata": {},
    "source": [
-    "You should notice a few things here. First, we gave the component an option for an `IntegrationControl` object.\n",
-    "This class contains data and metadata for the current time step and time stage.\n",
-    "An instance of this class should be passed to the outer integration component and most components in the time stage problem.\n",
+    "You should notice a few things here. First, we gave the component an option for an `IntegrationControl` interface which can be called with `StepTerminationIntegrationControl` to terminate after defined number of steps or `TimeTerminationIntegrationControl` to terminate when time objective is reached.\n",
+    "This interface contains data and metadata for the current time step and time stage.\n",
+    "An instance of this interface should be passed to the outer integration component and most components in the time stage problem.\n",
     "More details on that later.\n",
     "Second, notice that the three declared variables have certain tags.\n",
     "All three share the tag `\"x\"`, which is done so that they are grouped as belonging to the same quantity.\n",
@@ -142,12 +154,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
+    "from rkopenmdao.integration_control import StepTerminationIntegrationControl\n",
     "from rkopenmdao.runge_kutta_integrator import RungeKuttaIntegrator\n",
     "from rkopenmdao.butcher_tableaux import implicit_euler\n",
     "\n",
-    "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
-    "\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
+    "# Could be also called as following:\n",
+    "# integration_control = StepTerminationIntegrationControl(0.01, 100, 0.0)\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
     "\n",
@@ -312,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\n",
@@ -418,7 +431,7 @@
     "        partials[\"k_i\", \"s_i\"] = delta_t * inputs[\"b\"] / (1 -  inputs[\"b\"] *delta_t * butcher_diagonal_element)\n",
     "        partials[\"k_i\", \"b\"] = (inputs[\"x_old\"] + delta_t * inputs[\"s_i\"]) / (1 - inputs[\"b\"] * delta_t * butcher_diagonal_element)**2\n",
     "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponentWithStationaryInput(integration_control=integration_control))\n",
@@ -499,7 +512,7 @@
     "    def compute_partials(self, inputs, partials):\n",
     "        partials[\"log_x\", \"x\"] = 1 / inputs[\"x\"]\n",
     "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
@@ -629,7 +642,7 @@
     "delta_t = 0.01\n",
     "num_steps = 1000\n",
     "\n",
-    "integration_control = IntegrationControl(0.0, num_steps, delta_t)\n",
+    "integration_control = StepTerminationIntegrationControl(delta_t, num_steps, 0.0)\n",
     "\n",
     "functional_coefficients = MultidisciplinaryFunctionalCoefficients(num_steps, delta_t)\n",
     "\n",
@@ -700,7 +713,7 @@
     "        else:\n",
     "            return 0.0\n",
     "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
     "\n",
     "functional_coefficients = NinetyNinthStepFunctionalCoefficients()\n",
     "\n",
@@ -771,7 +784,7 @@
    "source": [
     "from rkopenmdao.checkpoint_interface.pyrevolve_checkpointer import PyrevolveCheckpointer\n",
     "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\n",
@@ -877,7 +890,7 @@
    "source": [
     "from rkopenmdao.checkpoint_interface.all_checkpointer import AllCheckpointer\n",
     "\n",
-    "integration_control = IntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
+    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
     "time_stage_problem = om.Problem()\n",
     "time_stage_problem.model.add_subsystem(\n",
@@ -939,6 +952,53 @@
    "id": "c54ca331",
    "metadata": {},
    "source": [
+    "### Adaptive Timestepping\n",
+    "\n",
+    "In order to perform adaptive time stepping the option `adaptive_time_stepping=True` is to be supplied to the `RungeKuttaIntegrator`. The ButcherTableau must be embedded, meaning, it should have 2 weight sets that will produce different order `p`. Embedded methods are intended to provide an estimate of the local truncation error for a single Runge-Kutta step, enabling the control of error through adaptive step sizing. The step size is influenced by the type of the controller (e.g. Integral, PID) and the tolerance. It is also possible to utilize multiple error controllers, such that, locally, the iterations on a step are dealt with controller-A and, globally, the time stepping is dealt with controller-B. \n",
+    "In addition, it important to use the `TimeTerminationIntegrationControl`, to ensure that the objective time is reached.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f796be58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rkopenmdao.integration_control import TimeTerminationIntegrationControl\n",
+    "from rkopenmdao.error_controllers import integral, pid\n",
+    "from rkopenmdao.butcher_tableaux import (\n",
+    "    embedded_second_order_two_stage_sdirk as two_stage_dirk,\n",
+    ")\n",
+    "integration_control = TimeTerminationIntegrationControl(initial_time=0.0, end_time=1.0, delta_t=0.5)\n",
+    "\n",
+    "time_stage_problem = om.Problem()\n",
+    "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
+    "\n",
+    "runge_kutta_problem = om.Problem()\n",
+    "runge_kutta_problem.model.add_subsystem(\n",
+    "    \"rk_comp\", \n",
+    "    RungeKuttaIntegrator(\n",
+    "        time_stage_problem=time_stage_problem,\n",
+    "        butcher_tableau=two_stage_dirk,\n",
+    "        integration_control=integration_control,\n",
+    "        time_integration_quantities=[\"x\"],\n",
+    "        error_controller=[pid, integral],\n",
+    "        error_controller_options={\"tol\": 1e-6},\n",
+    "        adaptive_time_stepping=True,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "runge_kutta_problem.setup()\n",
+    "runge_kutta_problem.run_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f525cc9c",
+   "metadata": {},
+   "source": [
     "# Further Examples\n",
     "\n",
     "To see some further examples, look into `/examples`.\n",
@@ -992,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
