--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -72,24 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "73d93e3a",
    "metadata": {
     "is_executing": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openmdao'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mopenmdao\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mom\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m  \u001b[39m\u001b[38;5;21;01mrkopenmdao\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mintegration_control\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IntegrationControl\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mODEComponent\u001b[39;00m(om\u001b[38;5;241m.\u001b[39mExplicitComponent):\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openmdao'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openmdao.api as om\n",
     "from  rkopenmdao.integration_control import IntegrationControl\n",
@@ -252,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a3d701a4",
    "metadata": {},
    "outputs": [],
@@ -451,7 +439,7 @@
     ")\n",
     "\n",
     "runge_kutta_problem.setup()\n",
-    "for param in [-1.0, 0.0, 1.0, 2.0]:\n",
+    "for param in [-1.0]: #, 0.0, 1.0, 2.0]:\n",
     "    runge_kutta_problem[\"rk_comp.b\"] = param\n",
     "    runge_kutta_problem.run_model()\n",
     "    print(runge_kutta_problem[\"rk_comp.x_final\"])\n",
@@ -473,8 +461,8 @@
     "    ax.legend()\n",
     "\n",
     "    plt.show()\n",
-    "    # reseting data file\n",
-    "    runge_kutta_problem.model.rk_comp._setup_write_file()\n"
+    "    # # reseting data file\n",
+    "    # runge_kutta_problem.model.rk_comp._setup_write_file()\n"
    ]
   },
   {
@@ -596,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c3524341",
    "metadata": {},
    "outputs": [],
@@ -809,8 +797,8 @@
     "        butcher_tableau=implicit_euler,\n",
     "        integration_control=integration_control,\n",
     "        time_integration_quantities=[\"x\", \"y\"],\n",
-    "        write_file=\"coupled_ODE_solving_example.h5\",\n",
-    "        write_out_distance=25,\n",
+    "        # write_file=\"coupled_ODE_solving_example.h5\",\n",
+    "        # write_out_distance=25,\n",
     "        checkpointing_type = PyrevolveCheckpointer\n",
     "    )\n",
     ")\n",
@@ -1038,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1052,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
