--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -954,7 +954,7 @@
    "source": [
     "### Adaptive Timestepping\n",
     "\n",
-    "In order to perform adaptive time stepping the option `adaptive_time_stepping=True` is to be supplied to the `RungeKuttaIntegrator`. The ButcherTableau must be embedded, meaning, it should have 2 weight sets that will produce different order `p`. Embedded methods are intended to provide an estimate of the local truncation error for a single Runge-Kutta step, enabling the control of error through adaptive step sizing. The step size is influenced by the type of the controller (e.g. Integral, PID) and the tolerance. It is also possible to utilize multiple error controllers, such that, locally, the iterations on a step are dealt with controller-A and, globally, the time stepping is dealt with controller-B. \n",
+    "In order to perform adaptive time stepping, the option `adaptive_time_stepping` should be toggled on. The `ButcherTableau` must be an embedded method, i.e. it should have 2 weight vectors that produce solutions of different orders `p`. Embedded methods are intended to provide an estimation of the local truncation error for a single Runge-Kutta step, enabling the control of error through adaptive step sizing. The step size is influenced by the type of the controller (e.g. Integral, PID) and the tolerance. It is also possible to utilize multiple types of error controllers, such that, the time stepping size can be refined with a different controller upon failure. \n",
     "In addition, it important to use the `TimeTerminationIntegrationControl`, to ensure that the objective time is reached.\n",
     "\n"
    ]
